지정좌표 주변 place 검색 성공 (네이버 place - 최대 5개 결과 리턴) (누를때마다 리턴결과 다름)
1029-1722
현재 좌표 위치확인 성공, 3초마다 재확인 성공

1029-2018
현재 위치 중심 주변 매장REST 성공

1107-1754
수동 고르기 프래그먼트 추가(frag11)
DB저장 성공
DB중복 확인 성공

--- a/app/src/main/res/layout/fragment_frag_one.xml
+++ b/app/src/main/res/layout/fragment_frag_one.xml
@@ -6,7 +6,12 @@
     tools:context=".FragOne"
     android:orientation="vertical">
 
-
+    <Button
+        android:id="@+id/bt_change"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="수동"
+        ></Button>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
