지정좌표 주변 place 검색 성공 (네이버 place - 최대 5개 결과 리턴) (누를때마다 리턴결과 다름)
1029-1722
현재 좌표 위치확인 성공, 3초마다 재확인 성공

1029-2018
현재 위치 중심 주변 매장REST 성공

1107-1754
수동 고르기 프래그먼트 추가(frag11)
DB저장 성공
DB중복 확인 성공

1108-1916
파싱 재수정완료

--- a/app/src/main/res/layout/fragment_frag_two.xml
+++ b/app/src/main/res/layout/fragment_frag_two.xml
@@ -37,10 +37,9 @@
                 ></Button>
         </LinearLayout>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:text=""
-            android:id="@+id/frag2_tv2"></TextView>
+    <ExpandableListView
+        android:id="@+id/frag2_Expandable"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></ExpandableListView>
 
 </LinearLayout>
