--- a/app/src/main/res/layout/fragment_frag_two.xml
+++ b/app/src/main/res/layout/fragment_frag_two.xml
@@ -9,31 +9,20 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="150dp"
             android:text=""
             android:id="@+id/frag2_tv1"></TextView>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <EditText
-                android:layout_width="150dp"
-                android:layout_height="match_parent"
-                android:id="@+id/frag2_et1"
-                android:hint="변수명 입력"
-                ></EditText>
+            android:orientation="vertical">
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/frag2_btsearch"
                 android:text="검색"
-                ></Button>
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/frag2_btlast"
-                android:text="Last"
+                android:layout_gravity="right"
                 ></Button>
         </LinearLayout>
 
