--- a/app/src/main/res/layout/dialog_groupname.xml
+++ b/app/src/main/res/layout/dialog_groupname.xml
@@ -8,9 +8,9 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
-            android:id="@+id/expand_GroupName"
+            android:id="@+id/dialog_GroupName"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="40dp"
             ></TextView>
     </LinearLayout>
 
