--- a/app/src/main/res/layout/fragment_frag_two.xml
+++ b/app/src/main/res/layout/fragment_frag_two.xml
@@ -16,13 +16,19 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal"
+            android:gravity="right">
+            <Button
+                android:id="@+id/frag2_dbsetting"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="DB설정"
+                ></Button>
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/frag2_btsearch"
                 android:text="검색"
-                android:layout_gravity="right"
                 ></Button>
         </LinearLayout>
 
