지정좌표 주변 place 검색 성공             (네이버 place - 최대 5개 결과 리턴)             (누를때마다 리턴결과 다름)
            1029-1722
            현재 좌표 위치확인 성공, 3초마다 재확인 성공

            1029-2018
            현재 위치 중심 주변 매장REST 성공

            1107-1754
            수동 고르기 프래그먼트 추가(frag11)
            DB저장 성공
            DB중복 확인 성공

            1108-1916
            파싱 재수정완료

            1109-1543
            확장리스트뷰 설정 성공

            1111-2216
            DrawableView 테스트전

            1112-1502
            menu1, menu2 적용
            menu2 회차검색 / DB설정 완료

            1112-1707
            메뉴2 구현완료
            메뉴1 구현시작

--- a/app/src/main/res/layout/fragment_frag_one.xml
+++ b/app/src/main/res/layout/fragment_frag_one.xml
@@ -31,7 +31,7 @@
         <ImageView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/iv_num1"
+            android:id="@+id/frag1_num1"
             android:src="@drawable/zero1"
             android:layout_weight="1"
             ></ImageView>
@@ -39,42 +39,42 @@
         <ImageView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/iv_num2"
+            android:id="@+id/frag1_num2"
             android:src="@drawable/zero1"
             android:layout_weight="1"
             ></ImageView>
         <ImageView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/iv_num3"
+            android:id="@+id/frag1_num3"
             android:src="@drawable/zero1"
             android:layout_weight="1"
             ></ImageView>
         <ImageView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/iv_num4"
+            android:id="@+id/frag1_num4"
             android:src="@drawable/zero1"
             android:layout_weight="1"
             ></ImageView>
         <ImageView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/iv_num5"
+            android:id="@+id/frag1_num5"
             android:src="@drawable/zero1"
             android:layout_weight="1"
             ></ImageView>
         <ImageView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/iv_num6"
+            android:id="@+id/frag1_num6"
             android:src="@drawable/zero1"
             android:layout_weight="1"
             ></ImageView>
         <ImageView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/iv_plus"
+            android:id="@+id/frag1_plus"
             android:src="@drawable/plus"
             android:layout_weight="0.5"
             android:layout_gravity="center_vertical"
@@ -84,7 +84,7 @@
         <ImageView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/iv_num7"
+            android:id="@+id/frag1_num7"
             android:src="@drawable/zero1"
             android:layout_weight="1"
             ></ImageView>
