--- a/app/src/main/res/layout/fragment_frag_two.xml
+++ b/app/src/main/res/layout/fragment_frag_two.xml
@@ -4,37 +4,147 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FragTwo"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:weightSum="5">
 
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:text=""
-            android:id="@+id/frag2_tv1"></TextView>
+    <!-- 첫번째 레이아웃 -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+        <!-- 1-1 리니어 레이아웃 (회차(trun_tv), 추첨날짜(date_tv) -->
+        <LinearLayout
+            android:layout_width="200dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:background="#33555555"
+            android:paddingBottom="10dp"
+            android:paddingRight="10dp">
+            <TextView
+                android:id="@+id/frag2_turn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="860회 당첨결과"
+                android:textSize="25dp"
+                android:textColor="#222222"
+                android:singleLine="true"
+                android:gravity="right"
+                ></TextView>
+            <TextView
+                android:id="@+id/frag2_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="2019년 4월 27일"
+                android:textSize="15dp"
+                android:gravity="right"
+                android:paddingRight="10dp"
+                ></TextView>
+        </LinearLayout>
 
+        <!-- 1-2 레이아웃 (기록 버튼(record_bt) / 검색 버튼(search_bt)-->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="horizontal"
             android:gravity="right">
             <Button
-                android:id="@+id/frag2_dbsetting"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="DB설정"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginRight="5dp"
+                android:id="@+id/record_bt"
                 ></Button>
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/frag2_btsearch"
-                android:text="검색"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginRight="5dp"
+                android:id="@+id/search_bt"
+                android:text="search"
                 ></Button>
-        </LinearLayout>
 
+        </LinearLayout>
+    </LinearLayout>
+
+    <!-- 두번째 레이아웃 (ImageView 8개 - 숫자7, 플러스표시1)-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp">
+
+        <ImageView
+            android:id="@+id/frag2_num1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/zero1"
+            android:layout_weight="1"
+            ></ImageView>
+        <ImageView
+            android:id="@+id/frag2_num2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/zero1"
+            android:layout_weight="1"
+            ></ImageView>
+        <ImageView
+            android:id="@+id/frag2_num3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/zero1"
+            android:layout_weight="1"
+            ></ImageView>
+        <ImageView
+            android:id="@+id/frag2_num4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/zero1"
+            android:layout_weight="1"
+            ></ImageView>
+        <ImageView
+            android:id="@+id/frag2_num5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/zero1"
+            android:layout_weight="1"
+            ></ImageView>
+        <ImageView
+            android:id="@+id/frag2_num6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/zero1"
+            android:layout_weight="1"
+            ></ImageView>
+        <ImageView
+            android:id="@+id/frag2_plus"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:src="@drawable/plus"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            ></ImageView>
+        <ImageView
+            android:id="@+id/frag2_num7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/zero1"
+            android:layout_weight="1"
+            ></ImageView>
+
+    </LinearLayout>
     <ExpandableListView
         android:id="@+id/frag2_Expandable"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></ExpandableListView>
+        android:layout_height="0dp"
+        android:layout_weight="3"></ExpandableListView>
 
 </LinearLayout>
