지정좌표 주변 place 검색 성공             (네이버 place - 최대 5개 결과 리턴)             (누를때마다 리턴결과 다름)
            1029-1722
            현재 좌표 위치확인 성공, 3초마다 재확인 성공

            1029-2018
            현재 위치 중심 주변 매장REST 성공

            1107-1754
            수동 고르기 프래그먼트 추가(frag11)
            DB저장 성공
            DB중복 확인 성공

            1108-1916
            파싱 재수정완료

            1109-1543
            확장리스트뷰 설정 성공

            1111-2216
            DrawableView 테스트전

            1112-1502
            menu1, menu2 적용
            menu2 회차검색 / DB설정 완료

            1112-1707
            메뉴2 구현완료
            메뉴1 구현시작

--- a/app/src/main/res/layout/expand_typeone.xml
+++ b/app/src/main/res/layout/expand_typeone.xml
@@ -3,30 +3,48 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:paddingTop="15dp"
+    android:paddingLeft="15dp"
     android:weightSum="5">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <TextView
+    <TextView
             android:id="@+id/expand_One_Rank"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="test"
-            android:textSize="25dp"
+            android:text="1등"
+            android:textSize="18dp"
+            android:textStyle="bold"
             android:gravity="center"
-            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:layout_weight="0.2"
             ></TextView>
-        <TextView
-            android:id="@+id/expand_One_TotalMoney"
+        <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="test"
-            android:textSize="25dp"
-            android:gravity="center"
-            android:layout_weight="1"
-            ></TextView>
+            android:layout_height="50dp"
+            android:layout_weight="0.7"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:text="총 당첨금액"
+                android:textSize="13dp"
+                android:layout_weight="0.4"/>
+
+            <TextView
+                android:id="@+id/expand_One_TotalMoney"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:text="1,000,000원"
+                android:textSize="15dp"
+                android:paddingLeft="30dp"
+                android:gravity="center_vertical"
+                android:layout_weight="0.6"/>
+
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -37,29 +55,42 @@
             android:id="@+id/expand_One_People"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="test"
-            android:textSize="25dp"
-            android:gravity="center"
-            android:layout_weight="1"
+            android:text="당첨자수 "
+            android:textSize="15dp"
+            android:layout_gravity="center_vertical"
+            android:paddingLeft="5dp"
+            android:layout_weight="0.3"
             ></TextView>
-        <TextView
-            android:id="@+id/expand_One_PersonalMoney"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="test"
-            android:textSize="25dp"
-            android:gravity="center"
-            android:layout_weight="1"
-            ></TextView>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="0.7"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:text="개별 당첨금액"
+                    android:textSize="13dp"
+                    android:layout_weight="0.4"/>
+                <TextView
+                    android:id="@+id/expand_One_PersonalMoney"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:text="100,000원"
+                    android:textSize="15dp"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="30dp"
+                    android:layout_weight="0.6"/>
+            </LinearLayout>
     </LinearLayout>
 
     <TextView
         android:id="@+id/expand_One_Norm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingLeft="45dp"
         android:text="test"
-        android:textSize="25dp"
-        android:gravity="center"
+        android:textSize="15dp"
         ></TextView>
 
 </LinearLayout>
