--- a/app/src/main/res/layout/dialog_listitem.xml
+++ b/app/src/main/res/layout/dialog_listitem.xml
@@ -3,6 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+<View
+    android:layout_width="match_parent"
+    android:layout_height="0.5dp"
+    android:background="#55f5f5f5"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,7 +21,9 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="880"
-            android:textSize="10dp"
+            android:textSize="13dp"
+            android:textColor="@color/white"
+            android:layout_marginLeft="10dp"
             android:gravity="center"
             ></TextView>
 
@@ -34,6 +40,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="1.5"
                 android:orientation="horizontal"
+                android:gravity="center_horizontal"
                 android:weightSum="7">
 
                 <ImageView
@@ -43,6 +50,7 @@
                     android:layout_weight="1"
                     android:src="@drawable/zero1"
                     android:paddingTop="20dp"
+                    android:adjustViewBounds="true"
                     ></ImageView>
                 <ImageView
                     android:id="@+id/dialog_Num2"
@@ -84,14 +92,6 @@
                     android:src="@drawable/zero1"
                     android:paddingTop="20dp"
                     ></ImageView>
-                <ImageView
-                    android:id="@+id/dialog_Num7"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:src="@drawable/zero1"
-                    android:paddingTop="20dp"
-                    ></ImageView>
             </LinearLayout>
 
             <!-- 홀짝비율 텍스트뷰 -->
@@ -102,6 +102,7 @@
                 android:layout_weight="0.7"
                 android:text="홀짝비율"
                 android:textStyle="bold"
+                android:textColor="@color/white"
                 android:gravity="right|center_vertical"
                 android:paddingRight="20dp"
                 ></TextView>
@@ -114,9 +115,9 @@
             android:layout_height="25dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:background="@drawable/plus"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
+            android:background="@drawable/ic_delete_forever_black_24dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             ></Button>
 
     </LinearLayout>
