--- a/app/src/main/res/layout/expand_typeone.xml
+++ b/app/src/main/res/layout/expand_typeone.xml
@@ -30,7 +30,8 @@
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="0.7"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginLeft="20dp">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
@@ -51,6 +52,11 @@
         </LinearLayout>
     </LinearLayout>
 
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="0.2dp"
+            android:background="#D3D3D3"
+            ></View>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -61,15 +67,18 @@
             android:layout_height="wrap_content"
             android:text="당첨자수 "
             android:textSize="15dp"
+            android:gravity="center_horizontal"
             android:layout_gravity="center_vertical"
             android:paddingLeft="5dp"
-            android:layout_weight="0.3"
+            android:layout_weight="0.2"
             ></TextView>
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_weight="0.7"
-                android:orientation="vertical">
+                android:orientation="vertical"
+
+                android:layout_marginLeft="20dp">
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
@@ -88,6 +97,11 @@
             </LinearLayout>
     </LinearLayout>
 
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="0.2dp"
+            android:background="#D3D3D3"
+            ></View>
     <TextView
         android:id="@+id/expand_One_Norm"
         android:layout_width="match_parent"
@@ -95,12 +109,13 @@
         android:paddingLeft="45dp"
         android:text="test"
         android:textSize="15dp"
+        android:layout_marginTop="2dp"
         ></TextView>
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="0.5dp"
+        android:layout_height="0.6dp"
         android:background="@android:color/darker_gray"
         android:layout_marginTop="5dp"></View>
 </LinearLayout>
