--- a/app/src/main/res/layout/expand_typetwo.xml
+++ b/app/src/main/res/layout/expand_typetwo.xml
@@ -17,7 +17,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="880"
-            android:textSize="20dp"
+            android:textSize="16dp"
             android:gravity="center"
             ></TextView>
 
@@ -34,6 +34,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="1.5"
                 android:orientation="horizontal"
+                android:gravity="center_horizontal"
                 android:weightSum="7">
 
                 <ImageView
@@ -84,14 +85,6 @@
                     android:src="@drawable/zero1"
                     android:paddingTop="20dp"
                     ></ImageView>
-                <ImageView
-                    android:id="@+id/expand_Two_Num7"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:src="@drawable/zero1"
-                    android:paddingTop="20dp"
-                    ></ImageView>
             </LinearLayout>
 
             <!-- 홀짝비율 텍스트뷰 -->
@@ -101,6 +94,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="0.7"
                 android:text="홀짝비율"
+                android:textStyle="bold"
                 android:gravity="right|center_vertical"
                 android:paddingRight="20dp"
                 ></TextView>
