--- a/app/src/main/res/layout/fragment_frag_one.xml
+++ b/app/src/main/res/layout/fragment_frag_one.xml
@@ -6,12 +6,6 @@
     tools:context=".FragOne"
     android:orientation="vertical">
 
-    <Button
-        android:id="@+id/bt_change"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="수동"
-        ></Button>
     <ImageView
         android:id="@+id/iv_pack"
         android:layout_width="200dp"
@@ -71,47 +65,64 @@
             android:src="@drawable/zero1"
             android:layout_weight="1"
             ></ImageView>
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/frag1_plus"
-            android:src="@drawable/plus"
-            android:layout_weight="0.5"
-            android:layout_gravity="center_vertical"
-            android:maxHeight="50dp"
-            android:maxWidth="50dp"
-            ></ImageView>
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/frag1_num7"
-            android:src="@drawable/zero1"
-            android:layout_weight="1"
-            ></ImageView>
     </LinearLayout>
-
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="30dp">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/bt_random"
-            android:text="번호뽑기"
-            ></Button>
+        <LinearLayout
+           android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:orientation="horizontal"
+          android:gravity="right">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/bt_store"
-            android:text="저장"
+             <Button
+                 android:layout_width="50dp"
+                 android:layout_height="50dp"
+                 android:id="@+id/bt_store"
+                 android:background="@drawable/ic_add_circle_black_24dp"
+                 android:clickable="true"
+                 ></Button>
+
+            <Button
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:id="@+id/bt_random"
+                android:background="@drawable/ic_touch_24dp"
+                android:clickable="true"
             ></Button>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="7dp"
+            android:gravity="right">
+            <TextView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:text="저장"
+                android:textSize="10dp"
+                android:textStyle="bold"
+                android:gravity="center_horizontal"
+                ></TextView>
+
+            <TextView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:text="랜덤뽑기"
+                android:textSize="10dp"
+                android:textStyle="bold"
+                android:gravity="center_horizontal"
+                ></TextView>
+        </LinearLayout>
     </LinearLayout>
-
 
 
 
