--- a/app/src/main/res/menu/navi_menu1.xml
+++ b/app/src/main/res/menu/navi_menu1.xml
@@ -1,7 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="설정" android:orderInCategory="1">
+
+    <!-- 모드 (자동,수동)설정 그룹 -->
+    <item android:title="Mode" android:orderInCategory="1">
+        <menu>
+            <group
+                android:id="@+id/menu1_group0"
+                android:checkableBehavior="single">
+                <item
+                    android:id="@+id/menu1_mode"
+                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+                    android:icon="@drawable/ic_bottom_menu2_24px"
+                    android:title="수동모드"/>
+            </group>
+
+        </menu>
+
+    </item>
+
+
+    <item android:title="설정" android:orderInCategory="3">
         <menu>
             <group
                 android:id="@+id/menu1_group1"
@@ -29,7 +48,7 @@
     </item>
 
     <!-- Setting 아이템, getItem(1) 인덱스 -->
-    <item android:title="Setting" android:orderInCategory="2">
+    <item android:title="Setting" android:orderInCategory="5">
         <!-- item - Setting의 서브메뉴 getSubMenu()-->
         <menu>
             <!-- 서브메뉴의 그룹, 초기 안보이게, 설정한값있으면 true로 변경 -->
