--- a/app/src/main/res/layout/expand_typeone.xml
+++ b/app/src/main/res/layout/expand_typeone.xml
@@ -3,9 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingTop="15dp"
     android:weightSum="5">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -22,9 +20,10 @@
             android:text="1등"
             android:textSize="18dp"
             android:textStyle="bold"
+            android:textColor="#000000"
             android:gravity="center"
             android:layout_gravity="center"
-            android:layout_weight="0.2"
+            android:layout_weight="0.3"
             ></TextView>
         <LinearLayout
             android:layout_width="0dp"
@@ -70,7 +69,7 @@
             android:gravity="center_horizontal"
             android:layout_gravity="center_vertical"
             android:paddingLeft="5dp"
-            android:layout_weight="0.2"
+            android:layout_weight="0.3"
             ></TextView>
             <LinearLayout
                 android:layout_width="0dp"
