--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:background="#fff"
     android:layout_width="match_parent"
-    android:layout_height="56dp">
+    android:layout_height="wrap_content">
     <ImageView
         android:id="@+id/iv_picture"
         android:src="@drawable/ic_store_24px"
@@ -35,7 +35,8 @@
             android:text="매장주소"
             android:textSize="13sp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:paddingBottom="8dp"/>
 
     </LinearLayout>
 
