--- a/app/src/main/res/layout/expand_typeone.xml
+++ b/app/src/main/res/layout/expand_typeone.xml
@@ -4,10 +4,18 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:weightSum="5">
+
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.6dp"
+        android:background="@android:color/darker_gray"></View>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="2dp"
         android:layout_marginLeft="10dp">
     <LinearLayout
         android:layout_width="match_parent"
@@ -112,9 +120,4 @@
         ></TextView>
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.6dp"
-        android:background="@android:color/darker_gray"
-        android:layout_marginTop="5dp"></View>
 </LinearLayout>
