--- a/app/src/main/res/layout/expand_typetwo.xml
+++ b/app/src/main/res/layout/expand_typetwo.xml
@@ -4,9 +4,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.6dp"
+        android:background="@android:color/darker_gray"></View>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="90dp"
         android:orientation="horizontal"
         android:weightSum="7">
 
@@ -32,10 +37,10 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1.5"
+                android:layout_weight="1"
                 android:orientation="horizontal"
                 android:gravity="center_horizontal"
-                android:weightSum="7">
+                android:weightSum="6">
 
                 <ImageView
                     android:id="@+id/expand_Two_Num1"
@@ -92,7 +97,7 @@
                 android:id="@+id/expand_Two_HallPair"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="0.7"
+                android:layout_weight="0.6"
                 android:text="홀짝비율"
                 android:textStyle="bold"
                 android:gravity="right|center_vertical"
@@ -108,6 +113,8 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="당첨결과"
+            android:textSize="16dp"
+            android:layout_marginRight="10dp"
             ></TextView>
     </LinearLayout>
 
