--- a/app/src/main/res/layout/fragment_frag_two.xml
+++ b/app/src/main/res/layout/fragment_frag_two.xml
@@ -14,7 +14,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="horizontal"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="30dp"
         android:paddingRight="10dp"
         android:paddingLeft="10dp">
         <!-- 1-1 리니어 레이아웃 (회차(trun_tv), 추첨날짜(date_tv) -->
@@ -57,12 +57,22 @@
             android:layout_height="match_parent"
             android:orientation="horizontal"
             android:gravity="right">
-            <Button
+            <ImageView
+                android:id="@+id/frag2_QRbt"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_touch_24dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                />
+            <ImageView
                 android:id="@+id/frag2_sharebt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="공유"
-                ></Button>
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_share_24px"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                ></ImageView>
         </LinearLayout>
     </LinearLayout>
 
@@ -133,7 +143,7 @@
             ></ImageView>
         <ImageView
             android:id="@+id/frag2_plus"
-            android:layout_width="100dp"
+            android:layout_width="110dp"
             android:layout_height="100dp"
             android:adjustViewBounds="true"
             android:src="@drawable/plus"
@@ -165,6 +175,7 @@
         android:layout_height="0dp"
         android:divider="@android:color/darker_gray"
         android:dividerHeight="0.5dp"
+        android:groupIndicator="@null"
         android:layout_weight="3"></ExpandableListView>
 
 </LinearLayout>
