--- a/app/src/main/res/layout/dialog_dblist.xml
+++ b/app/src/main/res/layout/dialog_dblist.xml
@@ -78,7 +78,7 @@
             android:layout_height="match_parent"
             android:layout_weight="3"
             android:gravity="center"
-            android:text="검색"
+            android:text="확인"
             android:textColor="@color/white"
             android:textSize="16sp"
             />
