--- a/app/src/main/res/layout/dialog_qritem.xml
+++ b/app/src/main/res/layout/dialog_qritem.xml
@@ -26,17 +26,50 @@
         android:textColor="@color/white"
         android:gravity="center"/>
 
-    <TextView
-        android:id="@+id/item_numberSet"
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="3"
-        android:paddingLeft="20dp"
-        android:text="선택한 번호"
-        android:textSize="14dp"
-        android:textColor="@color/white"
-        android:gravity="left|center_vertical"
-        />
+        android:orientation="horizontal"
+        >
+        <ImageView
+            android:id="@+id/QR_List_num1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:src="@drawable/num_null" />
+        <ImageView
+            android:id="@+id/QR_List_num2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:src="@drawable/num_null" />
+        <ImageView
+            android:id="@+id/QR_List_num3"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:src="@drawable/num_null" />
+        <ImageView
+            android:id="@+id/QR_List_num4"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:src="@drawable/num_null" />
+        <ImageView
+            android:id="@+id/QR_List_num5"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:src="@drawable/num_null" />
+        <ImageView
+            android:id="@+id/QR_List_num6"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:src="@drawable/num_null" />
+
+    </LinearLayout>
     <CheckBox
         android:id="@+id/item_checkbox"
         android:layout_width="0dp"
