--- a/app/src/main/res/menu/navi_menu2.xml
+++ b/app/src/main/res/menu/navi_menu2.xml
@@ -30,13 +30,13 @@
                     android:id="@+id/menu2_Search"
                     style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                     android:icon="@drawable/ic_search_24px"
-                    android:title="회차검색"/>
+                    android:title="회차 검색"/>
 
                 <item
                     android:id="@+id/menu2_DBSet"
                     style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                     android:icon="@drawable/ic_sdcard_24px"
-                    android:title="DB설정"/>
+                    android:title="기록 설정"/>
             </group>
         </menu>
     </item>
