--- a/app/src/main/res/layout/dialog_dblist.xml
+++ b/app/src/main/res/layout/dialog_dblist.xml
@@ -42,10 +42,11 @@
         android:id="@+id/DLTwo_ExList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:divider="#55f5f5f5"
-        android:dividerHeight="0.5dp"
+        android:divider="@null"
         android:groupIndicator="@null"
         ></ExpandableListView>
+<!--    android:divider="#55f5f5f5"-->
+<!--    android:dividerHeight="0.5dp"-->
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
