--- a/app/src/main/res/layout/dialog_listitem.xml
+++ b/app/src/main/res/layout/dialog_listitem.xml
@@ -112,13 +112,12 @@
         <Button
             android:id="@+id/dialog_delete"
             android:layout_width="0dp"
-            android:layout_height="25dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:background="@drawable/ic_delete_forever_black_24dp"
+            android:layout_height="15dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            ></Button>
+            android:layout_weight="1"
+            android:background="@drawable/ic_delete_forever_black_24dp"
+            android:gravity="center"></Button>
 
     </LinearLayout>
 </LinearLayout>
