--- a/app/src/main/res/menu/navi_menu3.xml
+++ b/app/src/main/res/menu/navi_menu3.xml
@@ -8,7 +8,8 @@
                 <item
                     android:id="@+id/menu3_map"
                     android:icon="@drawable/ic_place_24dp"
-                    android:title="주변 판매점"/>
+                    android:title="주변 판매점"
+                    android:enabled="false"/>
             </group>
         </menu>
     </item>
